# kagami-os

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  DIRECTION.md  README.md  ROADMAP.md  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
docs/: blob-architecture.md  browser-webview-offset.md  e2e-test-plan.md  perf-baseline.md  review-backlog.md  security-advisories.md  third-party-apps-and-browser.md
docs/superpowers/plans/: 2026-07-20-global-search-b9.md
docs/superpowers/specs/: 2026-07-20-global-search-b9-design.md
e2e/: a11y-axe.spec.ts  a11y-context-menu.spec.ts  a11y-menubar.spec.ts  a11y-reduced-motion.spec.ts  a11y-window-focus-trap.spec.ts  app-switcher.spec.ts  boot.spec.ts  crash.spec.ts  desktop-icons.spec.ts  dock.spec.ts  download.spec.ts  files-clipboard.spec.ts  files-keyboard-nav.spec.ts  files-metadata.spec.ts  files-multiselect.spec.ts  files-open-with-associations.spec.ts  files-trash.spec.ts  files.spec.ts  helpers.ts  multi-window.spec.ts  notes.spec.ts  notifications.spec.ts  open-with.spec.ts  player.spec.ts  private-mode.spec.ts  search.spec.ts  session-restore.spec.ts  shortcuts.spec.ts  terminal.spec.ts  theme.spec.ts  upload.spec.ts  viewer-pan-zoom.spec.ts  viewer.spec.ts  window-resize.spec.ts  window-snap-quarters.spec.ts  windows.spec.ts
e2e/fixtures/: sample.txt
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: browser.rs  lib.rs
src/apps/browser/: BrowserApp.tsx  browserBridge.ts  browserHistory.test.ts  browserHistory.ts  index.ts
src/apps/devcrash/: DevCrashApp.tsx  index.ts
src/apps/files/: FilesApp.tsx  FilesSidebar.tsx  FilesView.tsx  NodeGlyph.tsx  NodeInfoPanel.tsx  clipboardStore.ts  dnd.ts  download.test.ts  download.ts  fileMeta.test.ts  fileMeta.ts  index.ts  upload.test.ts  upload.ts  (+1 more)
src/design/: tokens.ts
src/lib/: asyncQueue.test.ts  asyncQueue.ts  format.test.ts  format.ts  pointerCapture.ts
src/styles/: global.css
src/system/: appCommands.ts  commands.ts  flags.ts  platform.test.ts  platform.ts  shortcuts.ts
(+92 files in other folders)
