[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
# "unstable" is required for multiwebview (`Window::add_child`), which backs
# the Browser app (N4). Upstream marks it unstable — its API may change
# between Tauri releases.
tauri = { version = "2.11.3", features = ["unstable"] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"

# AppKit introspection for the Browser child-webview placement fix: the host
# window's content-view inset (`content_inset_y` in `src/browser.rs`) is read
# from `NSWindow.contentLayoutRect`. Versions pinned to what wry/tao already
# pull in (see Cargo.lock) to avoid duplicate objc2 in the tree.
[target.'cfg(target_os = "macos")'.dependencies]
raw-window-handle = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSView", "NSWindow", "NSResponder"] }
objc2-foundation = { version = "0.3", features = ["NSGeometry"] }
